--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,99436],[],[[5,0,6,[7],[1,375,39614],[]],[8,0,9,[10],[1,39989,20466],[]],[11,0,9,[10],[0,60455,18266,12],[]],[13,0,9,[10],[1,78721,20715],[]]],[],[4,3,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,96],[],[[4,0,0,[],[1,96,0],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*ArgumentDemoTest","*C:\\Users\\sarvo\\PycharmProjects\\RobotFrameworkDemo2\\TestCases\\WebTestCases\\ArgumentDemoTest.robot","*TestCases/WebTestCases/ArgumentDemoTest.robot","*<p>To validate Scenarios of the WebShop Shoppping Portal\x3c/p>","*Validate Successful Registration","*<p>This Test is to Validate Successful Registration of the Webshop Portal\x3c/p>","*sanity","*Validate Successful Login","*<p>This Test is to Validate Successful Login of the Webshop Portal\x3c/p>","*smoke","*Failed Invalid Login","*Keyword 'This will wait for successful login and close the browser' expected 2 arguments, got 1.","*Validate Invalid Login"]);
+window.output["strings"] = window.output["strings"].concat(["*","*CustomeKeyword","*C:\\Users\\sarvo\\PycharmProjects\\RobotFrameworkDemo2\\TestCases\\WebTestCases\\CustomeKeyword.robot","*TestCases/WebTestCases/CustomeKeyword.robot","*Validate custom keyword using python"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:39","fail":1,"label":"All Tests","pass":3,"skip":0}],[{"elapsed":"00:00:40","fail":0,"label":"sanity","pass":1,"skip":0},{"elapsed":"00:00:59","fail":1,"label":"smoke","pass":2,"skip":0}],[{"elapsed":"00:01:39","fail":1,"id":"s1","label":"ArgumentDemoTest","name":"ArgumentDemoTest","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"CustomeKeyword","name":"CustomeKeyword","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1681332321618;
+window.output["baseMillis"] = 1681366314408;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 100503;
+window.output["generated"] = 144;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
